k8s/03-deploymet.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotodos
  namespace: gotodos
spec:
  selector:
    matchLabels:
      app: gotodos
  template:
    metadata:
      labels:
        app: gotodos
    spec:
      containers:
      - name: gotodos
        image: sing3demons/gotodos:0.0.3
        resources:
        ports:
          - containerPort: 8080
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        livenessProbe:
          exec:
            command:
              - cat
              - /tmp/live
          initialDelaySeconds: 5
          periodSeconds: 30
          timeoutSeconds: 30
          failureThreshold: 5
        volumeMounts:
          - mountPath: /uploads
            name: go-todo
      volumes:
        - name: go-todo
          persistentVolumeClaim:
            claimName: gotodos-pvc
