k8s/03-service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-todo
  namespace: gotodos
spec:
  # type: NodePort
  selector:
    app: gotodos
  ports:
  - port: 8080
    targetPort: 8080
    # nodePort: 30000
