k8s/redis-client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: gotodos
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:6.2.6-alpine
        imagePullPolicy: Always
        resources:
          limits:
            memory: "1Gi"
            cpu: "500m"
        ports:
        - containerPort: 6379
        livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 300
        readinessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 30
            failureThreshold: 5  

---
apiVersion: v1
kind: Service
metadata:
  name: redis-client
  namespace: gotodos
spec:
  # type: NodePort
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
