k8s/04-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
      kubernetes.io/ingress.class: nginx
  namespace: gotodos
  labels:
    name: my-ingress
spec:
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: go-todo
            port: 
              number: 8080
